package com.warehouseforgoods.warehouseforgoodsbackend.Error;

public class AuthorityException extends RuntimeException {
    public AuthorityException(String message) {
        super(message);
    }
}
